# GNU Automake config

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	dependencies \
	model \
	src \
	man \
	conf

#documentation
#test
#exmaples
#utilities


EXTRA_DIST = \
	CHANGELOG.md \
	CODE_OF_CONDUCT.md \
	CONTRIBUTING.md \
	CREDITS.md \
	LICENSE.txt \
	MODULES.md \
	NEWS.md \
	README.md \
	codemeta.json \
	conf/ucvm_template.conf


# End of file
