# GNU Automake config

dist_man1_MAN = \
	basin_query.1 \
	ecoalesce.1 \
	ecompact.1 \
	grd2etree.1 \
	grd_query.1 \
	mesh-check.1 \
	mesh-op.1 \
	mesh-strip-ijk.1 \
	ucvm2etree-extract-MPI.1 \
	ucvm2etree-merge-MPI.1 \
	ucvm2etree-sort-MPI.1 \
	ucvm2etree.1 \
	ucvm2mesh-mpi.1 \
	ucvm2mesh.1 \
	ucvm_query.1


# End of file
